hphp/hack/test/typecheck/coeffects/closures_implicit.php.exp
File "closures_implicit.php", line 11, characters 24-40:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_implicit.php", line 8, characters 22-25:
  From this declaration, the context of this function body provides the capability set {IO, Rx}
  File "closures_implicit.php", line 6, characters 27-36:
  But the function being called requires the capability set {AccessStaticVariable, IO, WriteProperty}
File "closures_implicit.php", line 19, characters 5-16:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "", line 0, characters 0-0:
  From this declaration, the context of this function body provides the capability set {AccessStaticVariable, IO, WriteProperty}
  File "closures_implicit.php", line 8, characters 22-25:
  But the function being called requires the capability set {IO, Rx}
File "closures_implicit.php", line 23, characters 28-39:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "", line 0, characters 0-0:
  From this declaration, the context of this function body provides the capability set {AccessStaticVariable, IO, WriteProperty}
  File "closures_implicit.php", line 22, characters 18-21:
  But the function being called requires the capability set {IO, Rx}
File "closures_implicit.php", line 28, characters 10-21:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_implicit.php", line 26, characters 36-44:
  From this declaration, the context of this function body provides the capability NonDet
  File "closures_implicit.php", line 8, characters 22-25:
  But the function being called requires the capability set {IO, Rx}
File "closures_implicit.php", line 32, characters 12-37:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_implicit.php", line 30, characters 5-8:
  From this declaration, the context of this function body provides the capability set {IO, Rx}
  File "closures_implicit.php", line 26, characters 36-44:
  But the function being called requires the capability NonDet
